[workspace]
members = ["t1_window", "t2_surface"]
resolver = "2"

[workspace.dependencies]
cfg-if = "1.0.0"
#Only features sync,macros,io-util,rt,time are supported on wasm
tokio = { version = "1.27.0", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wgpu = "0.15.1"
winit = "0.28.3"

# wasm
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Document", "Window", "Element"] }
