[workspace]
members = ["t1_window", "t2_surface"]
resolver = "2"

[workspace.dependencies]
cfg-if = "1.0.0"
# Only features sync,macros,io-util,rt,time are supported on wasm
tokio = { version = "1.28.1", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wgpu = { version = "0.16.0" }
winit = "0.28.6"

# wasm
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = ["Document", "Window", "Element"] }
