[package]
name = "t1_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
tracing-wasm = { workspace = true }
wgpu = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
