[package]
name = "t2_surface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true }
# only wasm
console_error_panic_hook = { workspace = true }
tracing-wasm = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
